homomorphisms slides begin

--- a/latex/misc/isomorphisms.tex
+++ b/latex/misc/isomorphisms.tex
@@ -199,7 +199,7 @@ Certainly every group is isomorphic to itself. There's an obvious way to do this
             \end{itemize}
             (Aside: these properties are just as easy to check, and maybe even easier, if you write your complex numbers in polar form $re^{i\theta}$.)
         \end{proof}
-        \item We shall allow ourselves a moment of brief annoyance that the word ``conjugation'' means something different in different contexts, and now that we've gotten that out of our system: Pick a fixed element $g\in G$. The ``$g$-conjugation map'' $\phi_g:G\to G$ given by $\phi_g(h) = ghg\inv$ is an automorphism.
+        \item We shall allow ourselves a moment of brief annoyance that the word ``conjugate'' means something different in different contexts, and now that we've gotten that out of our system: Pick a fixed element $g\in G$. The ``$g$-conjugation map'' $\phi_g:G\to G$ given by $\phi_g(h) = ghg\inv$ is an automorphism.
         \item Let's say that $G$ is an abelian group, so the squaring map $s(g) = g^2$ (which I might also write as $g\mapsto g^2$) is a homomorphism. Is it an automorphism? Prove that it is, or give an example where it's not.
         \item Is the squaring map an automorphism of $C_2$? $C_3$? $C_4$?
         \item The $k$-power map $g\mapsto g^k$ is an automorphism of $C_n$ \Alert{iff} $n$ and $k$ are relatively prime.
