isom theorems clicker slides

--- a/latex/beamer/isomorphism-theorems.tex
+++ b/latex/beamer/isomorphism-theorems.tex
@@ -1,4 +1,4 @@
-\documentclass[8pt, handout]{beamer} 
+\documentclass[8pt]{beamer} 
 
 %% Math packages
 %%
@@ -92,8 +92,8 @@
 \setbeamertemplate{enumerate items}[default]
 %\setbeamercolor{enumerate subitem}{fg=red!80!black}
 \def\opacity{0.5}
-\setbeamercovered{transparent}
-%\setbeamercovered{invisible}
+%\setbeamercovered{transparent}
+\setbeamercovered{invisible}
 
 \newcommand{\Pause}{}      %% Comment this out => lots more page breaks
 
