--- a/latex/beamer/isomorphism-theorems.tex
+++ b/latex/beamer/isomorphism-theorems.tex
@@ -2530,12 +2530,9 @@
   \medskip \pause
 
   Here are two good ones to play with:
-  \[
-  A=\begin{bmatrix}2&1\\0&2\end{bmatrix}
-  =\begin{bmatrix}-1&1\\0&-1\end{bmatrix},\qquad
-  B=\begin{bmatrix}2&0\\1&2\end{bmatrix}
-  =\begin{bmatrix}-1&0\\1&-1\end{bmatrix}. 
-  \]
+
+  \[a = \begin{bmatrix}0 & -1 \\ 1 & 1\end{bmatrix}\]
+  \[b = \begin{bmatrix}1& -1 \\ 1 & 0\end{bmatrix}\]
 \end{frame}
 
 %%====================================================================
