cauchy sylow rebuild

--- a/latex/beamer/cauchy-sylow.tex
+++ b/latex/beamer/cauchy-sylow.tex
@@ -1,5 +1,6 @@
 \documentclass[8pt, handout]{beamer} 
 
+
 %% Math packages
 %%
 \usepackage{amsmath,amsthm,amssymb}
@@ -96,7 +97,7 @@
 %\setbeamercovered{transparent}
 \setbeamercovered{invisible}
 
-\newcommand{\Pause}{}      %% Comment this out => lots more page breaks
+\newcommand{\Pause}{\pause}      %% Comment this out => lots more page breaks
 
 
 \AtBeginSection[]{
