updates to super secret no-students list of problems

--- a/latex/homework/final.tex
+++ b/latex/homework/final.tex
@@ -103,6 +103,7 @@ Here is my super-secret and extremely confidential collection of problems that I
         \item Use this result to prove that $\phi(g\inv) = \phi(g)\inv$.
         \item Now you can show that $\Image(\phi) := \{\phi(g) \mid g\in G\}$ is a subgroup of \underline{\quad},
         \item and also that $\Ker(\phi) := \{g \in G \mid \phi(g) = 1\}$ is a subgroup of \underline{\quad}.
+        \item Indeed, you can prove that $\Ker(\phi)$ is a \textit{normal} subgroup.
     \end{enumerate}
 \end{problem}
 
